<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">sunshine.hozakan.com</string>
    <string name="content_authority">com.hozakan.android.sunshine</string>

    <!-- Notification Format -->
    <string name="format_notification">Forecast: <xliff:g id="condition">%1$s</xliff:g> High: <xliff:g id="high">%2$s</xliff:g> Low: <xliff:g id="low">%3$s</xliff:g>
    </string>
    <!-- Strings related to Notification preference -->
    <string name="pref_last_notification">last_notification
    </string>

    <!-- general -->
    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>
    <!-- Strings for formatting weather-related data -->
    <!-- Temperature format [CHAR LIMIT=5] -->
    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>

    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">
        Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g>
    </string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>

    <!-- activitiy titles -->
    <string name="title_activity_detail">Details</string>
    <string name="title_activity_settings">Settings</string>

    <!-- menus -->
    <!-- main menu -->
    <string name="action_settings">Settings</string>
    <string name="action_show_map">Show map</string>

    <!-- detail menu -->
    <string name="action_share">Share</string>

    <!-- forecast screen -->
    <string name="refresh">refresh</string>

    <!-- settings screen -->
    <string name="pref_location_key" translatable="false">location</string>
    <string name="pref_location_label">Location</string>
    <string name="pref_location_default_value" translatable="false">94043</string>

    <string name="pref_unit_metric">Metric</string>
    <string name="pref_unit_imperial">Imperial</string>
    <string name="pref_unit_metric_value">metric</string>
    <string name="pref_unit_imperial_value">imperial</string>

    <string name="pref_unit_key">unit</string>
    <string name="pref_unit_label">Unit</string>
    <string name="pref_unit_default_value">@string/pref_unit_metric_value</string>

    <string name="pref_notifications_key">notifications</string>
    <string name="pref_notifications_label">Daily notification</string>

    <array name="pref_unit_entries">
        <item>@string/pref_unit_metric</item>
        <item>@string/pref_unit_imperial</item>
    </array>

    <array name="pref_unit_entryValues">
        <item>@string/pref_unit_metric_value</item>
        <item>@string/pref_unit_imperial_value</item>
    </array>

</resources>
