<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/pref_location_key"
        android:title="@string/pref_location_label"
        android:defaultValue="@string/pref_location_default_value"
        android:inputType="text"
        android:singleLine="true" />

    <ListPreference
        android:key="@string/pref_unit_key"
        android:title="@string/pref_unit_label"
        android:defaultValue="@string/pref_unit_default_value"
        android:entries="@array/pref_unit_entries"
        android:entryValues="@array/pref_unit_entryValues" />

    <CheckBoxPreference
        android:key="@string/pref_notifications_key"
        android:title="@string/pref_notifications_label"
        android:defaultValue="true" />

</PreferenceScreen>